# sovereign-sdk

./: Cargo.toml
examples/demo-rollup/: Cargo.toml  Makefile
examples/demo-rollup/src/: mock_rollup.rs
examples/demo-rollup/stf/: Cargo.toml
examples/demo-rollup/stf/src/: genesis_config.rs  runtime.rs
examples/test-data/genesis/demo-tests/mock/: counter.json
examples/test-data/requests/counter/: increment.json  set_value.json
examples/test-data/requests/order/: create_order.json
full-node/sov-prover-storage-manager/src/: dummy_storage.rs  lib.rs
full-node/sov-stf-runner/src/: runner.rs
module-system/module-implementations/counter-module/: Cargo.toml
module-system/module-implementations/counter-module/src/: call.rs  genesis.rs  lib.rs  query.rs  tests.rs
module-system/module-implementations/order-module/: Cargo.toml  README.md
module-system/module-implementations/order-module/src/: call.rs  genesis.rs  lib.rs  query.rs  tests.rs
module-system/sov-modules-api/src/: default_context.rs
module-system/sov-modules-rollup-blueprint/src/: lib.rs
module-system/sov-state/src/: prover_storage.rs  storage_manager.rs
